# code-practice

./: .gitignore  README.md  pyproject.toml  tasks.py
cpp_problems/: basics.cpp  helpers.h  input.txt  job_parser.cpp  sevenfive.cpp
old_code/: LFU.py  binaryTree.py  dlinkedlist.py  garbage_collection.py  hash.py  matrix.py  rollingDice.py  sorting.py
py_problems/: arbitrary.py  array.py  bit_manipulate.py  calculator.py  decorator.py  dp.py  graph.py  hashmap.py  heap.py  lc_855.py  linked_list.py  math.py  optiver.py  tree.py
