[tool.poetry]
name = "code-practice"
version = "0.1.0"
description = ""
authors = ["Joey <usjoeylou@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
numpy = ">=1.25.1"
black = ">=23.11.0"
autoflake = ">=2.2.1"
isort = ">=5.12.0"
invoke = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
